[gd_scene load_steps=16 format=3 uid="uid://c0kxwgxyb2lg0"]

[ext_resource type="Script" path="res://nodes/statue/main_statue.gd" id="1_4ip66"]
[ext_resource type="PackedScene" uid="uid://d3nwc37sijhkr" path="res://nodes/saturation_mask/saturated_mask.tscn" id="2_sxds1"]
[ext_resource type="Texture2D" uid="uid://dvr68c3okwgse" path="res://assets/chromatica.png" id="3_aej3w"]
[ext_resource type="PackedScene" uid="uid://bemfqhc7qs4qv" path="res://nodes/lantern/lantern.tscn" id="4_xgmbo"]
[ext_resource type="AudioStream" uid="uid://b5ctss2ngnpqg" path="res://assets/sfx/crystal-found.mp3" id="6_3xf6c"]
[ext_resource type="PackedScene" uid="uid://rxiqf0u87fub" path="res://nodes/statue/statue.tscn" id="7_sxds1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_67qxa"]
atlas = ExtResource("3_aej3w")
region = Rect2(272, 224, 48, 96)

[sub_resource type="Animation" id="Animation_67qxa"]
resource_name = "crystal_received"
length = 3.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StatueSFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_3xf6c")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pcj5m"]
_data = {
&"crystal_received": SubResource("Animation_67qxa")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_0hjm6"]
atlas = ExtResource("3_aej3w")
region = Rect2(230, 210, 38, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xb35"]
atlas = ExtResource("3_aej3w")
region = Rect2(32, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7j3f"]
atlas = ExtResource("3_aej3w")
region = Rect2(188, 210, 38, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_dffav"]
atlas = ExtResource("3_aej3w")
region = Rect2(32, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvpi7"]
atlas = ExtResource("3_aej3w")
region = Rect2(230, 264, 38, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cady"]
atlas = ExtResource("3_aej3w")
region = Rect2(80, 208, 16, 16)

[node name="Statue" type="Node2D"]
visibility_layer = 3
script = ExtResource("1_4ip66")

[node name="SaturatedMask" parent="." instance=ExtResource("2_sxds1")]
visibility_layer = 3
scale = Vector2(3, 3)

[node name="Art" type="Node2D" parent="."]

[node name="Chromatica" type="Sprite2D" parent="Art"]
position = Vector2(1, -5)
scale = Vector2(0.99999994, 0.99999994)
texture = SubResource("AtlasTexture_67qxa")

[node name="Lantern" parent="Art" instance=ExtResource("4_xgmbo")]
visible = false
position = Vector2(1, 0)

[node name="StatuePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pcj5m")
}

[node name="StatueSFX" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="YellowCrystal" parent="." instance=ExtResource("7_sxds1")]
position = Vector2(-15, -41)
lantern_color = 2
is_active = false
makes_lantern_change = false

[node name="Chromatica" parent="YellowCrystal/Art" index="0"]
visible = false
texture = SubResource("AtlasTexture_0hjm6")
_color = 2

[node name="LanternLight" parent="YellowCrystal/Art/Lantern" index="1"]
color = Color(1, 1, 0, 1)
energy = 0.25

[node name="Crystal" parent="YellowCrystal/Art" index="2"]
texture = SubResource("AtlasTexture_1xb35")
_color = 2

[node name="CyanCrystal" parent="." instance=ExtResource("7_sxds1")]
position = Vector2(17, -29)
lantern_color = 6
is_active = false
makes_lantern_change = false

[node name="Chromatica" parent="CyanCrystal/Art" index="0"]
visible = false
texture = SubResource("AtlasTexture_w7j3f")
_color = 6

[node name="LanternLight" parent="CyanCrystal/Art/Lantern" index="1"]
color = Color(0, 1, 1, 1)
energy = 0.25

[node name="Crystal" parent="CyanCrystal/Art" index="2"]
texture = SubResource("AtlasTexture_dffav")
_color = 6

[node name="PurpleCrystal" parent="." instance=ExtResource("7_sxds1")]
position = Vector2(-18, -1)
lantern_color = 5
is_active = false
makes_lantern_change = false

[node name="Chromatica" parent="PurpleCrystal/Art" index="0"]
visible = false
texture = SubResource("AtlasTexture_xvpi7")
_color = 5

[node name="LanternLight" parent="PurpleCrystal/Art/Lantern" index="1"]
color = Color(1, 0, 1, 1)
energy = 0.25

[node name="Crystal" parent="PurpleCrystal/Art" index="2"]
texture = SubResource("AtlasTexture_4cady")
_color = 5

[editable path="YellowCrystal"]
[editable path="YellowCrystal/Art/Lantern"]
[editable path="YellowCrystal/Art/Lantern/LanterArt"]
[editable path="CyanCrystal"]
[editable path="CyanCrystal/Art/Lantern"]
[editable path="CyanCrystal/Art/Lantern/LanterArt"]
[editable path="PurpleCrystal"]
[editable path="PurpleCrystal/Art/Lantern"]
[editable path="PurpleCrystal/Art/Lantern/LanterArt"]
